# AutoRender

./: .cursorrules  .gitignore  README.md  YUI_Box_Phase2_Disassembly Instructions.md
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-04-24_17-31-38Z-aider-integration-and-local-environment-setup.md  2026-04-24_18-30-13Z-yui-render-system-project-structure.md
Draw/: Draw.blend
Draw/.specstory/: .project.json  statistics.json
Draw/.specstory/history/: 2026-04-24_17-31-38Z-aider-integration-and-local-environment-setup.md
YUI_Render_System/: requirements.txt
YUI_Render_System/assets/: YUI_Box_Phase3_Assembly_V1.3dm  YUI_Box_Phase3_Assembly_V1.stp
YUI_Render_System/config/: cmf_map.json
YUI_Render_System/docs/: render-command-guide.md
YUI_Render_System/src/: auditor.py  blender_auto_pipeline.py  main.py
dev/: ssh-autorender.txt
local_model_api/: .env.example  pyproject.toml
local_model_api/local_model_api/: __init__.py  __main__.py  env_store.py  resolve.py  runtime.py
local_model_api/local_model_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
